# Uni-C

./: CMakeLists.txt  main.c
dastr/primfactorZerlegung/: primfactorZerlegung.c  primfactorZerlegung.h
dastr/primzahlen/: primzahlen.c  primzahlen.h
dastr/recursive/: recursive.c  recursive.h
dastr/sin/: sinDataTable.c  sinDataTable.h
ggT/: ggT.c  ggT.h
ueb0/: ueb0.c  ueb0.h
ueb1/: benzin.c  benzin.h
ueb10/: stats.c  stats.h  util.c  util.h
ueb4/: datentypen.c  datentypen.h
ueb5/: calculator.c  calculator.h  helper.c  helper.h
ueb6/: bruchrechnung.c  bruchrechnung.h  rational.c  rational.h
ueb7/: loops.c  loops.h
ueb8/: game.c  game.h
ueb9/: prime.c  prime.h  ueb9.c  ueb9.h  vectors.c  vectors.h
vorl0/: vorl0.c  vorl0.h
vorl1/: vorl1.c  vorl1.h
vorl2/: vorl2.c  vorl2.h
vorl3/: matrix.c  matrix.h  vorl3.c  vorl3.h
